# Data-Engineering-Assessment

./: .gitignore  Makefile  SAMPLE orders_analytics.py  TODO.md  readme.md
.github/: CODEOWNERS
.github/workflows/: _promote.yaml  ci.yaml
app/: .ruff.toml  Dockerfile  Makefile  lambda.py  pyproject.toml  readme.md
app/src/orders/application/: order_analytics.py
app/src/orders/entities/: order.py
app/src/orders/services/: order_service.py
app/src/products/: .gitkeep
app/tests/orders/services/: test_order_service.py
app/tests/orders/services/resources/: sample_orders.csv
terraform/: readme.md
terraform/assignment/: aws.tf  backend.tfvars  main.tf  personal-backend.tfvars  personal.tfvars
terraform/modules/ecr-repo/: readme.md
terraform/modules/lambda/: readme.md
